[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/enemies/nodes/base_enemy/base_enemy.gd" type="Script" id=1]
[ext_resource path="res://src/enemies/nodes/base_enemy/hitBox.gd" type="Script" id=2]

[node name="Base_enemy" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 257
script = ExtResource( 1 )

[node name="hurtBox" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 128

[node name="hitBox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 64
script = ExtResource( 2 )

[node name="SpritePivot" type="Position2D" parent="."]

[connection signal="area_entered" from="hurtBox" to="." method="_on_hurtBox_area_entered"]
